# swift-bare-metal

./: .clangd  .gitignore  BridgingHeader.h  CMakeLists.txt  Main.swift  README.md  tools.c  tools.h
RTE/_Release_MPS3-Corstone-300/: Pre_Include_Global.h  RTE_Components.h
RTE/_Release_VHT-Corstone-300/: Pre_Include_Global.h
fvp_configs/: VHT-Corstone-300.txt
linker_scripts/: ac6_sse300_mps3_s.sct
linker_scripts/SSE-300-MPS3/: region_limits.h
